add search phrase and order by to open api spec
