# openapi/openapi.yaml
@@ -7,6 +7,18 @@ paths:
   /items:
     get:
       operationId: GetItems
+      parameters:
+        - in: query
+          name: search_phrase
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: order_by
+          required: true
+          schema:
+            type: string
+            enum: [name_asc, name_desc, created_at_asc, created_at_desc]
       responses:
         200:
           description: All items belonging to a user
